MDEV-9334 ALTER from DECIMAL to BIGINT UNSIGNED returns a wrong result

When altering from DECIMAL to *INT UNIGNED or to BIT, go through val_decimal(),
to avoid truncation to the biggest possible signed integer
(0x7FFFFFFFFFFFFFFF / 9223372036854775807).